# CourseWork_datastructure_2025_text2_printmanager

./: .gitignore  CMakeLists.txt  PrintManager.pro  README.md  build.sh
src/: main_gui.cpp  mainwindow.cpp  mainwindow.h  printmanager.h
